# Nexustal

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile  conanfile.txt
backend/application/: auth_service.cpp  auth_service.hpp  endpoint_service.cpp  endpoint_service.hpp  identity_use_cases.hpp  invitation_service.cpp  invitation_service.hpp  role_service.cpp  role_service.hpp  wizard_service.cpp  wizard_service.hpp
backend/application/execution/: dynamic_variables.hpp  request_bundle.hpp  request_executor.cpp  request_executor.hpp
backend/domain/: common.hpp  endpoint.hpp  endpoint_repository.hpp  identity.hpp  identity_repository.hpp  notification_port.hpp  password_hasher.hpp  wizard_contracts.hpp
backend/domain/auth/: capabilities.hpp  token_service.hpp
backend/domain/environment/: environment.hpp  environment_repository.hpp
backend/include/nexustal/platform/: migration_runner.hpp
backend/infrastructure/adapters/: bcrypt_password_hasher.hpp  environment_cache.cpp  environment_cache.hpp  jwt_token_service.cpp  jwt_token_service.hpp  postgres_endpoint_repository.cpp  postgres_endpoint_repository.hpp  postgres_environment_repository.cpp  postgres_environment_repository.hpp  postgres_invitation_repository.cpp  postgres_invitation_repository.hpp  postgres_project_repository.cpp  postgres_project_repository.hpp  postgres_team_repository.cpp  postgres_team_repository.hpp  postgres_user_repository.cpp  postgres_user_repository.hpp  redis_notification_service.cpp  redis_notification_service.hpp  sse_connection_manager.cpp  sse_connection_manager.hpp  timestamp_codec.hpp
backend/infrastructure/sandbox/: nt_api_bindings.cpp  nt_api_bindings.hpp  quickjs_sandbox.cpp  quickjs_sandbox.hpp
backend/migrations/: 001_initial.sql  002_endpoints.sql  003_execution_and_collab.sql  004_token_version.sql  005_environment_globals.sql
backend/src/: main.cpp
backend/src/controllers/: auth_controller.cpp  auth_controller.hpp  endpoint_controller.cpp  endpoint_controller.hpp  invitation_controller.cpp  invitation_controller.hpp  sse_controller.cpp  sse_controller.hpp  wizard_controller.cpp  wizard_controller.hpp
backend/src/filters/: jwt_auth_filter.cpp  jwt_auth_filter.hpp
backend/src/platform/: migration_runner.cpp
backend/tests/domain/: auth_service_tests.cpp  capabilities_tests.cpp  endpoint_service_tests.cpp  identity_tests.cpp  invitation_service_tests.cpp  role_service_tests.cpp  wizard_service_tests.cpp
backend/tests/execution/: dynamic_variables_tests.cpp  request_executor_tests.cpp
backend/tests/sandbox/: quickjs_sandbox_tests.cpp
database/migrations/: 001_initial_schema.sql
docs/: ARCHITECTURE.md  BACKLOG.md  ROADMAP.md
docs/adr/: 0001-system-vision.md  0002-self-hosted-monolith.md
infra/docker/: docker-compose.yml
scripts/: phase-0.md
